--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 A collection of my Project Euler solutions in Python, Ruby and C#.
 
 
-I've solved 69 problems, a majority of which were solved in C# as it was the language I was working with most heavily when I discovered Project Euler. 
+I've solved 69 problems so far, a majority of which were solved in C# as it was the language I was working with most heavily when I discovered Project Euler. 
 
 I'll add all my solutions over the course of time.
